[ FIX ] Esconder scrollbars desnecessárias em navegadores chromium

--- a/src/main/resources/static/scss/editor.scss
+++ b/src/main/resources/static/scss/editor.scss
@@ -55,7 +55,7 @@ aside {
   }
 
   section {
-    overflow: scroll;
+    overflow: auto;
   }
 
   button.alternar-painel {
